--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.10",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-paginate": "^5.2.3",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.0.1"
   },
