--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "lodash": "^4.17.10",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
+    "mobx-react-router": "^4.0.4",
     "react": "^16.4.0",
+    "react-app-rewire-mobx": "^1.0.8",
     "react-dom": "^16.4.0",
     "react-paginate": "^5.2.3",
     "react-router-dom": "^4.2.2",
@@ -13,9 +17,12 @@
     "reactstrap": "^6.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-app-rewired": "^1.5.2"
   }
 }
